# python-geojson-tools

./: .gitignore  README.md  pyproject.toml
src/: base_entity.py  constants.py  errors.py  feature.py  feature_collection.py  geometries.py  geometry_tools.py  tools.py
tests/: test_feature.py  test_feature_collection.py  test_line_string.py  test_loader.py  test_multi_polygon.py  test_point.py  test_polygon.py  valid_feature.json  valid_feature_collection.json  valid_multi_polygon.json  valid_point.json
tests/files/: valid_feature.json  valid_line_string.json  valid_multi_polygon.json  valid_polygon.json
